[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/STATE_MACHINE/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/sheets0.png" type="Texture" id=2]
[ext_resource path="res://Player/STATE_MACHINE/Idle.gd" type="Script" id=3]
[ext_resource path="res://Player/STATE_MACHINE/Move.gd" type="Script" id=4]
[ext_resource path="res://Player/STATE_MACHINE/Jump.gd" type="Script" id=5]
[ext_resource path="res://Player/Die.gd" type="Script" id=6]
[ext_resource path="res://Player/WallJump.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]

resource_name = "Fall"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 28, 29 ]
}

[sub_resource type="Animation" id=2]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 64, 65, 66, 67, 68, 69 ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="Animation" id=4]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 80, 81, 82, 83, 88, 89, 90, 91 ]
}

[sub_resource type="Animation" id=5]

resource_name = "WallJump"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 93 ]
}

[sub_resource type="CapsuleShape2D" id=6]

custom_solver_bias = 0.0
radius = 20.0
height = 20.0

[node name="KinematicBody2D" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 0.204612, 0.204674 )
texture = ExtResource( 2 )
vframes = 12
hframes = 8
frame = 61
_sections_unfolded = [ "Animation" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Fall = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/Move = SubResource( 4 )
anims/WallJump = SubResource( 5 )
blend_times = [  ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 0, 4 )
shape = SubResource( 6 )

[node name="RayCast2DLeft" type="RayCast2D" parent="." index="3"]

position = Vector2( 0.12767, 4.62165e-07 )
rotation = 1.5708
scale = Vector2( 1, 0.903971 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 32 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RayCast2DRight" type="RayCast2D" parent="." index="4"]

position = Vector2( -0.469407, 1.69925e-06 )
rotation = -1.5708
scale = Vector2( 1, 0.894621 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 32 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="States" type="Node" parent="." index="5"]

[node name="Idle" type="Node" parent="States" index="0"]

script = ExtResource( 3 )

[node name="Move" type="Node" parent="States" index="1"]

script = ExtResource( 4 )

[node name="Jump" type="Node" parent="States" index="2"]

script = ExtResource( 5 )

[node name="Die" type="Node" parent="States" index="3"]

script = ExtResource( 6 )

[node name="WallJump" type="Node" parent="States" index="4"]

script = ExtResource( 7 )


